styles/Home.module.css
.container {
  padding: 0 2rem;
}

.main {
  min-height: 90vh;
  padding: 4rem 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.footer {
  background-color: rgb(235, 241, 249);
  display: flex;
  border-top: 1px solid #eaeaea;
  flex-direction: row;
  align-items: center;
}

.footer div {
  display: flex;
  flex: 0.5;
  flex-direction: row;
  padding: 1rem 4rem;
}

.footer div a {
  display: flex;
  align-items: center;
  padding-left: 5px;
}

.footer div a p {
  color:#6C6F84;
  font-size: small;
}

.footer div p {
  color:#6C6F84;
  font-size: small;
}

.title a {
  color: #0070f3;
  text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
}

.title {
  margin: 0;
  line-height: 1.15;
  font-size: 4rem;
}

.title,
.description {
  text-align: center;
}

.description {
  margin: 4rem 0;
  line-height: 1.5;
  font-size: 1.5rem;
}

.code {
  background: #fafafa;
  border-radius: 5px;
  padding: 0.75rem;
  font-size: 1.1rem;
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
}

.grid {
  display: flex;
  /* align-items: center; */
  justify-content: space-evenly;
  flex-wrap: wrap;
  max-width: 800px;
  padding: 0.5rem 0.5rem;
}

.card {
  margin: 1rem;
  padding: 1.5rem;
  text-align: left;
  color: inherit;
  text-decoration: none;
  border: 1px solid #eaeaea;
  border-radius: 10px;
  transition: color 0.15s ease, border-color 0.15s ease;
  max-width: 300px;
  visibility: true;
}

.hidden {
  visibility: false;
}

.card:hover,
.card:focus,
.card:active {
  /* color: #0070f3; */
  border-color: #0070f3;
}

.card h2 {
  margin: 0 0 1rem 0;
  font-size: 1.5rem;
}

.card p {
  margin: 0;
  font-size: 1.25rem;
  line-height: 1.5;
}

.logo {
  height: 1em;
  margin-left: 0.5rem;
}

@media (max-width: 600px) {
  .grid {
    width: 100%;
    flex-direction: column;
  }
}

